istio/idp.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  labels:
    app: dex
spec:
  ports:
    - name: http-dex
      port: 5556
  selector:
    app: dex
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: dex
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dex
        version: v1
    spec:
      containers:
        - name: dex
          image: maxnilz/grpc-istio-demo:idp
          imagePullPolicy: Always
          command: ["/usr/local/bin/dex", "serve", "/config.yaml"]
          ports:
            - containerPort: 5556
          volumeMounts:
            - name: dex-config
              mountPath: /config.yaml
              subPath: dex-config
      volumes:
        - name: dex-config
          configMap:
            name: dex-config
