istio/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
  - name: grpc-web
    port: 9000
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      annotations:
        sidecar.istio.io/userMount: '[{"name": "proto", "mountPath": "/grpc-descriptor", "readonly": true}]'
        sidecar.istio.io/userVolume: '[{"name": "proto", "persistentVolumeClaim": {"claimName": "pv-claim"}}]'
      labels:
        app: server
        version: v1
    spec:
      containers:
        - name: server
          image: maxnilz/grpc-istio-demo:server
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
