istio/envoyfilter-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: simple-envoy-filter
spec:
  workloadLabels:
    app: server
  filters:
    - listenerMatch:
        listenerType: SIDECAR_INBOUND
        listenerProtocol: HTTP
      insertPosition:
        index: FIRST
      filterType: HTTP
      filterName: envoy.fault
      filterConfig:
        abort:
          percentage:
            numerator: 100
            denominator: HUNDRED
          httpStatus: 444
        headers:
          name: envoyfilter-test
          exactMatch: foobar123
