istio/frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: frontend-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 31400
      name: grpc
      protocol: HTTP
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-bypass
spec:
  hosts:
    - "*"
  gateways:
  - frontend-gateway
  http:
  - match:
      - uri:
          prefix: /dex
    route:
      - destination:
          host: dex
  - route:
      - destination:
          host: web-ui
