istio/gateway-bypass.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-bypass
spec:
  selector:
    istio: custom-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 31400
      name: grpc
      protocol: HTTP
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-bypass
spec:
  hosts:
    - "*"
  gateways:
  - gateway-bypass
  http:
  - match:
      - uri:
          prefix: /dex
    route:
      - destination:
          host: dex
  - route:
      - destination:
          host: web-ui
