istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 31400
      name: grpc
      protocol: HTTP
    hosts:
      - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
spec:
  hosts:
    - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /demo-server/proto.EmojiService/
    rewrite:
      uri: /proto.EmojiService/
    route:
    - destination:
        host: server
    corsPolicy:
      allowOrigin:
        - "*"
      allowMethods:
        - POST
        - GET
        - OPTIONS
        - PUT
        - DELETE
      allowHeaders:
        - grpc-timeout
        - content-type
        - keep-alive
        - user-agent
        - cache-control
        - content-type
        - content-transfer-encoding
        - custom-header-1
        - x-accept-content-transfer-encoding
        - x-accept-response-streaming
        - x-user-agent
        - x-grpc-web
      maxAge: 1728s
      exposeHeaders:
        - custom-header-1
        - grpc-status
        - grpc-message
      allowCredentials: true
  - match:
    - uri:
        prefix: /demo-server/
    rewrite:
      uri: /
#    removeRequestHeaders: [ "X-Forwarded-Proto", "X-Forwarded-Host" ]
#    appendRequestHeaders:
#      "X-Forwarded-Proto": "https"
#      "X-Forwarded-Host": "api.dev.meeraspace.com/meerafs/rest"
#    headers:
#      request:
#        set:
#          "X-Forwarded-Proto": "https"
#          "X-Forwarded-Host": "api.dev.meeraspace.com/meerafs/rest"
    route:
      - destination:
          host: server
  - match:
      - uri:
          prefix: /dex
    route:
      - destination:
          host: dex
  - match:
    - port: 31400
    route:
    - destination:
        host: server
        port:
          number: 9000
